app/assets/styles/layout/_layout.scss
@use "../variables" as *;
@use "./mixins" as *;

// body
body {
  overflow-y: scroll;
  overflow-x: hidden;
  min-height: 100vh;
  margin: 0;
  //scroll-padding-top: 48px;
}

.siteFooter {
  min-height: 80px;
  background: $footerBg;
}

// calculate main content height
.siteMain {
  min-height: calc(100vh - 45px - 80px - 100px);
  position: relative;
  @include md-up {
    padding-top: 1rem;
  }
}

// horizontal layout - header
.siteHeader,
.siteFooter {
  .layout__inner {
    display: flex;
    justify-content: space-between;
  }
}

// horizontal layout - content
.layout__inner {
  position: relative;
  max-width: $widthPage;
  min-width: 0;
  margin: 0 auto;
  padding: 1rem;
  @include xl {
    min-width: $widthPage;
  }
}

.layout__outer {
  display: flex;
  position: relative;
  margin: 0 auto;
  //max-width: $widthOuter;
  gap: $widthGap;
  height: 100%;
  min-height: 700px;

  .layout__inner {
    flex-grow: 1;
  }

  .layout__navSide > * {
    justify-content: flex-end;
  }

  .layout__navPage > * {
    justify-content: flex-start;
  }

  .layout__navSide,
  .layout__navPage {
    flex-grow: 1;
    padding: 0 1rem;

    @include xl-down {
      display: none;
    }

    > * {
      position: sticky;
      display: flex;
      top: 10rem;

      > * {
        width: $widthAside;
      }
    }
  }
}

